--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-menubar></app-menubar> -->
-<div class="flex justify-content-center align-items-center h-full">
+<div class="flex justify-content-center align-items-center" style="margin-top: 100px;">
     <router-outlet></router-outlet>
     <p-toast></p-toast>
 </div>
