--- a/src/app/components/Add/add-client/add-client.component.html
+++ b/src/app/components/Add/add-client/add-client.component.html
@@ -1,25 +1,25 @@
 <app-menubar></app-menubar>
-<form [formGroup]="addAdminForm">
-    <p-card header="Add Administrateur" [style]="{ width: '360px' }">
-        <div class="field">
-            <label for="firstName">FirstName</label>
-            <input type="text" pInputText formControlName="FirstName" class="w-full" name="FirstName" placeholder="Type your First Name" />
-            <small *ngIf="FirstName.invalid && (FirstName.dirty || FirstName.touched)" class="block p-error">
-      <div *ngIf="FirstName.errors?.['required']">First Name is required.</div>
-      <div *ngIf="FirstName.errors?.['pattern']">Enter a valid Name</div>
-    </small>
-        </div>
+<form [formGroup]="addClientForm" (ngSubmit)="onSubmit()">
+    <p-card header="Add Client" [style]="{ width: '360px' }">
         <div class="field">
             <label for="LastName">LastName</label>
-            <input type="text" pInputText formControlName="LastName" class="w-full" name="LastName" placeholder="Type your Last Name" />
+            <input type="text" pInputText formControlName="prenom" class="w-full" name="prenom" placeholder="Type your Last Name" />
             <small *ngIf="LastName.invalid && (LastName.dirty || LastName.touched)" class="block p-error">
-    <div *ngIf="LastName.errors?.['required']">Last Name is required.</div>
-    <div *ngIf="LastName.errors?.['pattern']">Enter a valid LastName</div>
-  </small>
+        <div *ngIf="LastName.errors?.['required']">Last Name is required.</div>
+        <div *ngIf="LastName.errors?.['pattern']">Enter a valid LastName</div>
+      </small>
+        </div>
+        <div class="field">
+            <label for="firstName">FirstName</label>
+            <input type="text" pInputText formControlName="nom" class="w-full" name="nom" placeholder="Type your First Name" />
+            <small *ngIf="FirstName.invalid && (FirstName.dirty || FirstName.touched)" class="block p-error">
+        <div *ngIf="FirstName.errors?.['required']">First Name is required.</div>
+        <div *ngIf="FirstName.errors?.['pattern']">Enter a valid Name</div>
+      </small>
         </div>
         <div class="field">
             <label for="Username">Username</label>
-            <input type="text" pInputText formControlName="Username" class="w-full" name="Username" placeholder="Type your Username" />
+            <input type="text" pInputText formControlName="username" class="w-full" name="username" placeholder="Type your Username" />
             <small *ngIf="Username.invalid && (Username.dirty || Username.touched)" class="block p-error">
           <div *ngIf="Username.errors?.['required']">Username is required.</div>
           <div *ngIf="Username.errors?.['pattern']">Enter a valid UserName</div>
@@ -35,22 +35,22 @@
         </div>
         <div class="field">
             <label for="mobile">Mobile</label>
-            <input type="text" pInputText formControlName="Mobile" class="w-full" name="Mobile" placeholder="Type your phone number" />
+            <input type="text" pInputText formControlName="mobile" class="w-full" name="mobile" placeholder="Type your phone number" />
             <small *ngIf="Mobile.invalid && (Mobile.dirty || Mobile.touched)" class="block p-error">
-      <div *ngIf="email.errors?.['required']">Mobile is required.</div>
-    </small>
+        <div *ngIf="email.errors?.['required']">Mobile is required.</div>
+      </small>
         </div>
         <div class="field">
             <label for="password">Password</label>
             <br>
-            <p-password [(ngModel)]="value" [toggleMask]="true" formControlName="password"></p-password>
+            <p-password [(ngModel)]="value" [toggleMask]="true" formControlName="motdepasse"></p-password>
             <!-- <input type="password" pInputText formControlName="password" class="w-full" name="password" placeholder="Type your password" /> -->
             <small *ngIf="password.invalid && (password.dirty || password.touched)" class="block p-error">
           <div *ngIf="password.errors?.['required']">Password is required.</div>
         </small>
         </div>
 
-        <p-button label="Register" styleClass="w-full" [disabled]="addAdminForm.invalid" type="submit"></p-button>
+        <p-button label="Register" styleClass="w-full" [disabled]="addClientForm.invalid" type="submit"></p-button>
         <div class="mt-2">Already a member? <a routerLink="/login">Login</a></div>
     </p-card>
 </form>
