--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,4 +1,9 @@
-<p-menubar [model]="items"></p-menubar>
+<p-menubar [model]="items">
+
+    <ng-template pTemplate="end">
+        <button pButton icon="pi pi-fw pi-power-off" (click)="logout()" [routerLink]="'/login'"></button>
+    </ng-template>
+</p-menubar>
 <!-- <div class="card">
     <p-toolbar styleClass="bg-gray-900 shadow-2" [style]="{ 'border-radius': '3rem', 'background-image': 'linear-gradient(to right, var(--bluegray-500), var(--bluegray-800))' }">
         <ng-template pTemplate="start">
