--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-menubar></app-menubar> -->
+<app-menubar *ngIf="showMenubar"></app-menubar>
 <div class="flex justify-content-center align-items-center" style="margin-top: 100px;">
     <router-outlet></router-outlet>
     <p-toast></p-toast>
