--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -1,4 +1,4 @@
-.page-container {
+/* .page-container {
   margin: 1rem;
   font-family: Arial, sans-serif;
 }
@@ -67,4 +67,4 @@
   background-color: #0cad23;
   border-radius: 6px;
 
-}
+} */
