--- a/src/app/components/Add/add-client/add-client.component.html
+++ b/src/app/components/Add/add-client/add-client.component.html
@@ -50,7 +50,7 @@
         </small>
         </div>
 
-        <p-button label="Register" styleClass="w-full" [disabled]="addClientForm.invalid" type="submit"></p-button>
+        <p-button label="Add" styleClass="w-full" [disabled]="addClientForm.invalid" type="submit"></p-button>
         <div class="mt-2">Already a member? <a routerLink="/login">Login</a></div>
     </p-card>
 </form>
