--- a/src/app/components/Add/add-consultant/add-consultant.component.html
+++ b/src/app/components/Add/add-consultant/add-consultant.component.html
@@ -1,5 +1,5 @@
 <app-menubar></app-menubar>
-<form [formGroup]="addConsultantForm" (ngSubmit)="onsubmit()">
+<form [formGroup]="addConsultantForm" (ngSubmit)="onSubmit()">
     <p-card header="Add Consultant" [style]="{ width: '360px' }">
         <div class="field">
             <label for="firstName">FirstName</label>
@@ -50,7 +50,7 @@
         </small>
         </div>
 
-        <p-button label="Register" styleClass="w-full" [disabled]="addConsultantForm.invalid" type="submit"></p-button>
+        <p-button label="Add" styleClass="w-full" [disabled]="addConsultantForm.invalid" type="submit"></p-button>
         <div class="mt-2">Already a member? <a routerLink="/login">Login</a></div>
     </p-card>
 </form>
