--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="field">
             <div class="input-group mb-3 w-full">
-                <label class="input-group-text w-full" for="inputGroupSelect01">Options</label>
+                <label class="input-group-text w-full" for="inputGroupSelect01">Your Role</label>
                 <br>
                 <select class="form-select w-full" id="inputGroupSelect01" pInputText formControlName="role" name="role">
                 <option value="Client">Client</option>
@@ -28,7 +28,7 @@
               </select>
             </div>
         </div>
-        <p-button label="Submit" [disabled]="loginForm.invalid" type="submit" (Click)="onSubmit()"></p-button>
+        <p-button label="Sign In" [disabled]="loginForm.invalid" type="submit" (Click)="onSubmit()"></p-button>
         <div class="mt-2">Not a member? <a routerLink="/register">Register</a></div>
         <div class="mt-2">Forgot your password ? <a routerLink="/forgotpassword">Replace it </a></div>
     </p-card>
