--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-menubar *ngIf="showMenubar"></app-menubar>
+<app-header *ngIf="showheader"></app-header>
+
 <div class="flex justify-content-center align-items-center" style="margin-top: 100px;">
     <router-outlet></router-outlet>
     <p-toast></p-toast>
 </div>
+<app-footer *ngIf="showfooter"> </app-footer>
