--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,5 @@
+<!-- <section class="h-screen bg-cover bg-[url('src/assets/background.jpg')] bg-gray-950/75 bg-blend-multiply"> -->
+
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <p-card header="Login" [style]="{width:'360px'}">
         <div class="field">
@@ -29,9 +31,11 @@
             </div>
         </div>
         <p-button label="Sign In" [disabled]="loginForm.invalid" type="submit" (Click)="onSubmit()"></p-button>
-        <div class="mt-2">Not a member? <a routerLink="/register">Register</a></div>
+        <!-- <div class="mt-2">Not a member? <a routerLink="/register">Register</a></div> -->
         <div class="mt-2">Forgot your password ? <a routerLink="/forgotpassword">Replace it </a></div>
     </p-card>
 
 
 </form>
+
+<!-- </section> -->
